# prayer-times-pro

./: .gitignore  Cargo.toml  package.json
crates/prayer-core/: Cargo.toml
crates/prayer-core/src/: coordinates.rs  degree_math.rs  engine.rs  high_latitude.rs  hour_angle.rs  lib.rs  params.rs  solar.rs
crates/prayer-core/src/adapters/: diyanet.rs  egyptian.rs  hanafi.rs  isna.rs  jakim.rs  karachi.rs  kemenag.rs  manual.rs  mod.rs  moonsighting.rs  mwl.rs  registry.rs  umm_al_qura.rs
crates/prayer-core/src/models/: current_waqt.rs  mod.rs  notification.rs  notification_sound.rs  prayer.rs  prayer_times.rs  settings.rs
crates/prayer-core/tests/: adapter.rs  current_waqt.rs  diyanet_golden.rs  engine.rs  jakim_golden.rs  kemenag_golden.rs  model.rs  settings.rs
crates/prayer-core/tests/common/: mod.rs
scripts/: render-icons.mjs
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/audio/: soft-chime.m4a  takbir.m4a
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  autostart.rs  commands.rs  focus.rs  lib.rs  location.rs  main.rs  panel.rs  scheduler.rs  settings_io.rs  state.rs  tray.rs
src-tauri/src/location/: ip.rs  mod.rs
src/components/: icons.tsx  logo.tsx
src/hooks/: use-countdown.ts  use-panel-auto-size.ts
src/lib/: cn.ts  format.ts  ipc.ts  mihrab.ts  settings.ts  theme.ts
src/stores/: prayer.store.ts  settings.store.ts
src/windows/backdrop/: Backdrop.tsx  backdrop.tsx
src/windows/focus/: focus.tsx  quotes.ts
src/windows/main/: main-window.tsx
src/windows/onboarding/: onboarding.tsx
src/windows/panel/: Panel.tsx  adhan-bar.tsx  live-countdown.tsx  panel-footer.tsx  panel-header.tsx  panel-summary.tsx  panel.tsx  prayer-list.tsx  prayer-ring.tsx
src/windows/settings/: controls.tsx  settings.tsx
src/windows/settings/tabs/: calculation-tab.tsx  focus-tab.tsx  general-tab.tsx  location-tab.tsx  notifications-tab.tsx
