[workspace]
resolver = "2"
members = ["crates/prayer-core", "src-tauri"]

# Optimized release profile (size + speed). Lives at the workspace root because
# Cargo only honors `[profile.*]` from the root manifest.
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
