[package]
name = "prayer-times-pro"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "prayer_times_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
# In-process Adhan playback. The bundled audio is AAC-in-MP4 (.m4a), so enable
# Symphonia's AAC decoder + ISO-MP4 demuxer on top of rodio's defaults.
rodio = { version = "0.20", features = ["symphonia-aac", "symphonia-isomp4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prayer-core = { path = "../crates/prayer-core" }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
chrono-tz = "0.10"
iana-time-zone = "0.1"

# macOS-only: convert the panel window into a non-activating NSPanel so it
# behaves like a native menu-bar popover (vanishes on click-outside, never
# activates the app or minimizes). User-approved external dependency.
[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

# NOTE: the optimized `[profile.release]` lives in the workspace-root Cargo.toml —
# Cargo only honors `[profile.*]` from the root manifest in a workspace.
